[LOOM-1942][BpkPrice]: Fix right aligned price layout

--- a/packages/bpk-component-price/src/BpkPrice.module.scss
+++ b/packages/bpk-component-price/src/BpkPrice.module.scss
@@ -38,7 +38,7 @@
 
     &--right {
       display: flex;
-      flex-direction: row-reverse;
+      justify-content: flex-end;
     }
   }
 
